--- a/template/PNET_project.bib
+++ b/template/PNET_project.bib
@@ -39,7 +39,20 @@ Yard BD, Adams DJ, Chie EK, Tamayo P, Battaglia JS, Gopal P, Rogacki K, Pearson 
   howpublished={"https://keras.io/api/callbacks/early_stopping/"},
   year={Accessed: April 9, 2024}
 }
-
+@article{CNV,
+title = {DNA copy number variation: Main characteristics, evolutionary significance, and pathological aspects},
+journal = {Biomedical Journal},
+volume = {44},
+number = {5},
+pages = {548-559},
+year = {2021},
+issn = {2319-4170},
+doi = {https://doi.org/10.1016/j.bj.2021.02.003},
+url = {https://www.sciencedirect.com/science/article/pii/S2319417021000093},
+author = {Ondrej Pös and Jan Radvanszky and Gergely Buglyó and Zuzana Pös and Diana Rusnakova and Bálint Nagy and Tomas Szemes},
+keywords = {Copy number variants, Structural variation, Human genome, CNV formation, Evolution, Genetic diseases},
+abstract = {Copy number variants (CNVs) were the subject of extensive research in the past years. They are common features of the human genome that play an important role in evolution, contribute to population diversity, development of certain diseases, and influence host–microbiome interactions. CNVs have found application in the molecular diagnosis of many diseases and in non-invasive prenatal care, but their full potential is only emerging. CNVs are expected to have a tremendous impact on screening, diagnosis, prognosis, and monitoring of several disorders, including cancer and cardiovascular disease. Here, we comprehensively review basic definitions of the term CNV, outline mechanisms and factors involved in CNV formation, and discuss their evolutionary and pathological aspects. We suggest a need for better defined distinguishing criteria and boundaries between known types of CNVs.}
+}
 @misc{myriad,
     title={{Myriad}},
     author={{UCL Research Computing}},
@@ -170,10 +183,226 @@ Publisher: Nature Publishing Group},
 volume = 25,
 pages ={{25-29}}
 }
-@article{go_1,
+@article{go_2,
     author = {{The Gene Ontology Consortium}},
     title = {{he Gene Ontology knowledgebase in 2023}},
     journal = {{Genetics}},
     year = 2023,
 volume = 224,
+}
+
+@article{rev_radio,
+    author = {{Price, J and others}},
+    title = {{ Predicting tumour radiosensitivity to deliver precision radiotherapy}},
+    journal ={{Nat Rev Clin Oncol}} ,
+    year = 2023,
+doi ={{https://doi.org/10.1038/s41571-022-00709-y}}
+}
+@article{breast_cancer,
+    author = {{Rouzier, R and others}},
+    title = {{Multigene assays and molecular markers in breast cancer: systematic
+review of health economic analyses.}},
+    journal = {{Breast Cancer Res. Treat.}},
+    year = 2013,
+volume =139,
+pages ={{621-637}}
+}
+
+@online{noauthor_machine_nodate,
+	title = {Machine Learning for Beginners: An Introduction to Neural Networks - victorzhou.com},
+	url = {https://victorzhou.com/blog/intro-to-neural-networks/},
+	shorttitle = {Machine Learning for Beginners},
+	abstract = {A simple explanation of how they work and how to implement one from scratch in Python.},
+	urldate = {2024-04-13},
+	langid = {english},
+	file = {Snapshot:/Users/daksheshkololgi/Zotero/storage/FUDPHX5K/intro-to-neural-networks.html:text/html},
+}
+
+@online{noauthor_what_nodate,
+	title = {What is a Neural Network? - Artificial Neural Network Explained - {AWS}},
+	url = {https://aws.amazon.com/what-is/neural-network/},
+	shorttitle = {What is a Neural Network?},
+	abstract = {Find out what a neural network is, how and why businesses use neural networks,, and how to use neural networks on {AWS}.},
+	titleaddon = {Amazon Web Services, Inc.},
+	urldate = {2024-04-13},
+	langid = {american},
+	file = {Snapshot:/Users/daksheshkololgi/Zotero/storage/ZAE2L7YS/neural-network.html:text/html},
+}
+
+@misc{McEwan,
+    title={{Machine Learning for Big Data}},
+    author={{Jason McEwan}},
+    howpublished={{https://www.ucl.ac.uk/mssl/study/msc-courses}},
+    year ={Acessed: April 10, 2024},
+    publisher={University College London}
+}
+
+
+
+@article{drug_cell,
+    author = {Kuenzi BM, Park J, Fong SH, Sanchez KS, Lee J, Kreisberg JF, Ma J, Ideker T.},
+    title = {Response and Synergy Using a Deep Learning Model of Human Cancer Cells.},
+    year = {2020},
+    publisher = {NCBI},
+    volume = {9},
+    issn = {672-684.e6.},
+    journal = {Cancer Cell},
+    }
+
+
+@incollection{RNA,
+	location = {Treasure Island ({FL})},
+	title = {Biochemistry, {RNA} Structure},
+	rights = {Copyright © 2024, {StatPearls} Publishing {LLC}.},
+	url = {http://www.ncbi.nlm.nih.gov/books/NBK558999/},
+	abstract = {Ribonucleic acid ({RNA}) is a molecule that is present in the majority of living organisms and viruses. It is made up of nucleotides, which are ribose sugars attached to nitrogenous bases and phosphate groups. The nitrogenous bases include adenine, guanine, uracil, and cytosine. {RNA} mostly exists in the single-stranded form, but there are special {RNA} viruses that are double-stranded. The {RNA} molecule can have a variety of lengths and structures. An {RNA} virus uses {RNA} instead of {DNA} as its genetic material and can cause many human diseases. Transcription is the process of {RNA} formation from {DNA}, and translation is the process of protein synthesis from {RNA}. The means of {RNA} synthesis and the way that it functions differs between eukaryotes and prokaryotes. Specific {RNA} molecules also regulate gene expression and have the potential to serve as therapeutic agents in human diseases.},
+	booktitle = {{StatPearls}},
+	publisher = {{StatPearls} Publishing},
+	author = {Wang, David and Farhana, Aisha},
+	urldate = {2024-04-15},
+	date = {2024},
+	pmid = {32644425},
+	file = {Printable HTML:/Users/j/Zotero/storage/9LMUG3P9/NBK558999.html:text/html},
+}
+
+@incollection{genetics_basics,
+	title = {Introduction},
+	url = {https://www.ncbi.nlm.nih.gov/books/NBK218247/},
+	abstract = {All living organisms are composed of cells, each no wider than a human hair. Each of our cells contains the same complement of {DNA} constituting the human genome (Figure 1-1.) The {DNA} sequence of every person's genome is the blueprint for his or her development from a single cell to a complex, integrated organism that is composed of more than 1013 (10 million million) cells. Encoded in the {DNA} sequence are fundamental determinants of those mental capacities—learning, language, memory—essential to human culture. Encoded there as well are the mutations and variations that cause or increase susceptibility to many diseases responsible for much human suffering. Unprecedented advances in molecular and cellular biology, in biochemistry, in genetics, and in structural biology—occurring at an accelerating rate over the past decade—define this as a unique and opportune moment in our history: For the first time we can envision obtaining easy access to the complete sequence of the 3 billion nucleotides in human {DNA} and deciphering much of the information contained therein. Converging developments in recombinant {DNA} technology and genetics make obtaining a complete ordered {DNA} clone collection indexed to the human genetic linkage map a realistic immediate goal. Even determination of the complete nucleotide sequence is attainable, although ambitious. The {DNA} in the human genome is remarkably stable, as it must be to provide a reliable blueprint for building a new organism. For this reason, obtaining complete genetic linkage and physical maps and deciphering the sequence will provide a permanent base of knowledge concerning all human beings—a base whose utility for all activities of biology and medicine will increase with future analysis, research, and experimentation.},
+	booktitle = {Mapping and Sequencing the Human Genome},
+	publisher = {National Academies Press ({US})},
+	author = {Genome, National Research Council ({US}) Committee on Mapping \{and\} Sequencing the Human},
+	urldate = {2024-04-15},
+	date = {1988},
+	langid = {english},
+	file = {Snapshot:/Users/j/Zotero/storage/ULYQ8PPU/NBK218247.html:text/html},
+}
+
+@misc{MAML,
+	title = {Model-Agnostic Meta-Learning for Fast Adaptation of Deep Networks},
+	url = {http://arxiv.org/abs/1703.03400},
+	abstract = {We propose an algorithm for meta-learning that is model-agnostic, in the sense that it is compatible with any model trained with gradient descent and applicable to a variety of different learning problems, including classification, regression, and reinforcement learning. The goal of meta-learning is to train a model on a variety of learning tasks, such that it can solve new learning tasks using only a small number of training samples. In our approach, the parameters of the model are explicitly trained such that a small number of gradient steps with a small amount of training data from a new task will produce good generalization performance on that task. In effect, our method trains the model to be easy to fine-tune. We demonstrate that this approach leads to state-of-the-art performance on two few-shot image classification benchmarks, produces good results on few-shot regression, and accelerates fine-tuning for policy gradient reinforcement learning with neural network policies.},
+	number = {{arXiv}:1703.03400},
+	publisher = {{arXiv}},
+	author = {Finn, Chelsea and Abbeel, Pieter and Levine, Sergey},
+	urldate = {2024-04-15},
+	date = {2017-07-18},
+	eprinttype = {arxiv},
+	eprint = {1703.03400 [cs]},
+	keywords = {Computer Science - Artificial Intelligence, Computer Science - Computer Vision and Pattern Recognition, Computer Science - Machine Learning, Computer Science - Neural and Evolutionary Computing},
+	file = {arXiv.org Snapshot:/Users/j/Zotero/storage/8T6WYYQI/1703.html:text/html;Full Text PDF:/Users/j/Zotero/storage/T4HNE9FM/Finn et al. - 2017 - Model-Agnostic Meta-Learning for Fast Adaptation o.pdf:application/pdf},
+}
+
+@article{PDX,
+	title = {Patient-derived cell line, xenograft and organoid models in lung cancer therapy},
+	volume = {9},
+	issn = {2218-6751},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7653147/},
+	doi = {10.21037/tlcr-20-154},
+	abstract = {Lung cancer accounts for most cancer-related deaths worldwide and has an overall 5-year survival rate of {\textasciitilde}15\%. Cell lines have played important roles in the study of cancer biology and potential therapeutic targets, as well as pre-clinical testing of novel drugs. However, most experimental therapies that have cleared preclinical testing using established cell lines have failed phase {III} clinical trials. This suggests that such models may not adequately recapitulate patient tumor biology and clinical outcome predictions. Here, we discuss and compare different pre-clinical lung cancer models, including established cell lines, patient-derived cell lines, xenografts and organoids, summarize the methodology for generating these models, and review their relative advantages and limitations in different oncologic research applications. We further discuss additional gaps in patient-derived pre-clinical models to better recapitulate tumor biology and improve their clinical predictive power.},
+	pages = {2214--2232},
+	number = {5},
+	journaltitle = {Translational Lung Cancer Research},
+	shortjournal = {Transl Lung Cancer Res},
+	author = {Huo, Ku-Geng and D’Arcangelo, Elisa and Tsao, Ming-Sound},
+	urldate = {2024-04-15},
+	date = {2020-10},
+	pmid = {33209645},
+	pmcid = {PMC7653147},
+	file = {Full Text PDF:/Users/j/Zotero/storage/MZLDBCD8/Huo et al. - 2020 - Patient-derived cell line, xenograft and organoid .pdf:application/pdf},
+}
+
+@article{multitask,
+	title = {Multitask learning improves prediction of cancer drug sensitivity},
+	volume = {6},
+	rights = {2016 The Author(s)},
+	issn = {2045-2322},
+	url = {https://www.nature.com/articles/srep31619},
+	doi = {10.1038/srep31619},
+	abstract = {Precision oncology seeks to predict the best therapeutic option for individual patients based on the molecular characteristics of their tumors. To assess the preclinical feasibility of drug sensitivity prediction, several studies have measured drug responses for cytotoxic and targeted therapies across large collections of genomically and transcriptomically characterized cancer cell lines and trained predictive models using standard methods like elastic net regression. Here we use existing drug response data sets to demonstrate that multitask learning across drugs strongly improves the accuracy and interpretability of drug prediction models. Our method uses trace norm regularization with a highly efficient {ADMM} (alternating direction method of multipliers) optimization algorithm that readily scales to large data sets. We anticipate that our approach will enhance efforts to exploit growing drug response compendia in order to advance personalized therapy.},
+	pages = {31619},
+	number = {1},
+	journaltitle = {Scientific Reports},
+	shortjournal = {Sci Rep},
+	author = {Yuan, Han and Paskov, Ivan and Paskov, Hristo and González, Alvaro J. and Leslie, Christina S.},
+	urldate = {2024-04-15},
+	date = {2016-08-23},
+	langid = {english},
+	note = {Publisher: Nature Publishing Group},
+	keywords = {Cancer genomics, Machine learning},
+	file = {Full Text PDF:/Users/j/Zotero/storage/28L4GQSN/Yuan et al. - 2016 - Multitask learning improves prediction of cancer d.pdf:application/pdf},
+}
+
+@online{CTRP,
+	title = {{CCCT} - {CTRP} - Clinical Trials Reporting Program - {NCI}},
+	url = {https://www.cancer.gov/about-nci/organization/ccct/ctrp},
+	abstract = {The Clinical Trials Reporting Program is a comprehensive database of all {NCI}-supported clinical trials.},
+	type = {{cgvArticle}},
+	urldate = {2024-04-15},
+	date = {2020-01-28},
+	langid = {english},
+	note = {Archive Location: nciglobal,ncienterprise},
+	file = {Snapshot:/Users/j/Zotero/storage/VGGQ2HYD/ctrp.html:text/html},
+}
+
+@online{ccle,
+	title = {Cancer Cell Line Encyclopedia ({CCLE})},
+	url = {https://sites.broadinstitute.org/ccle/},
+	urldate = {2024-04-15},
+	langid = {english},
+	file = {Snapshot:/Users/j/Zotero/storage/X3IHS395/ccle.html:text/html},
+}
+
+@article{manem,
+	title = {Modeling Cellular Response in Large-Scale Radiogenomic Databases to Advance Precision Radiotherapy},
+	volume = {79},
+	issn = {1538-7445},
+	doi = {10.1158/0008-5472.CAN-19-0179},
+	abstract = {Radiotherapy is integral to the care of a majority of patients with cancer. Despite differences in tumor responses to radiation (radioresponse), dose prescriptions are not currently tailored to individual patients. Recent large-scale cancer cell line databases hold the promise of unravelling the complex molecular arrangements underlying cellular response to radiation, which is critical for novel predictive biomarker discovery. Here, we present {RadioGx}, a computational platform for integrative analyses of radioresponse using radiogenomic databases. We fit the dose-response data within {RadioGx} to the linear-quadratic model. The imputed survival across a range of dose levels ({AUC}) was a robust radioresponse indicator that correlated with biological processes known to underpin the cellular response to radiation. Using {AUC} as a metric for further investigations, we found that radiation sensitivity was significantly associated with disruptive mutations in genes related to nonhomologous end joining. Next, by simulating the effects of different oxygen levels, we identified putative genes that may influence radioresponse specifically under hypoxic conditions. Furthermore, using transcriptomic data, we found evidence for tissue-specific determinants of radioresponse, suggesting that tumor type could influence the validity of putative predictive biomarkers of radioresponse. Finally, integrating radioresponse with drug response data, we found that drug classes impacting the cytoskeleton, {DNA} replication, and mitosis display similar therapeutic effects to ionizing radiation on cancer cell lines. In summary, {RadioGx} provides a unique computational toolbox for hypothesis generation to advance preclinical research for radiation oncology and precision medicine. {SIGNIFICANCE}: The {RadioGx} computational platform enables integrative analyses of cellular response to radiation with drug responses and genome-wide molecular data. {GRAPHICAL} {ABSTRACT}: http://cancerres.aacrjournals.org/content/canres/79/24/6227/F1.large.jpg.See related commentary by Spratt and Speers, p. 6076.},
+	pages = {6227--6237},
+	number = {24},
+	journaltitle = {Cancer Research},
+	shortjournal = {Cancer Res},
+	author = {Manem, Venkata Sk and Lambie, Meghan and Smith, Ian and Smirnov, Petr and Kofia, Victor and Freeman, Mark and Koritzinsky, Marianne and Abazeed, Mohamed E. and Haibe-Kains, Benjamin and Bratman, Scott V.},
+	date = {2019-12-15},
+	pmid = {31558563},
+	pmcid = {PMC8128135},
+	keywords = {Biomarkers, Tumor, Cell Line, Tumor, Computational Biology, Databases, Genetic, Datasets as Topic, {DNA} Repair, Dose-Response Relationship, Radiation, Gene Expression Profiling, Humans, Models, Biological, Mutation, Neoplasms, Precision Medicine, Radiation Tolerance, Treatment Outcome},
+	file = {Full Text:/Users/j/Zotero/storage/M944WWI8/Manem et al. - 2019 - Modeling Cellular Response in Large-Scale Radiogen.pdf:application/pdf},
+}
+
+@article{pharmaco,
+	title = {{PharmacoGx}: an R package for analysis of large pharmacogenomic datasets},
+	volume = {32},
+	issn = {1367-4811, 1367-4803},
+	url = {https://academic.oup.com/bioinformatics/article/32/8/1244/1744214},
+	doi = {10.1093/bioinformatics/btv723},
+	shorttitle = {{PharmacoGx}},
+	abstract = {Summary: Pharmacogenomics holds great promise for the development of biomarkers of drug response and the design of new therapeutic options, which are key challenges in precision medicine. However, such data are scattered and lack standards for efﬁcient access and analysis, consequently preventing the realization of the full potential of pharmacogenomics. To address these issues, we implemented {PharmacoGx}, an easy-to-use, open source package for integrative analysis of multiple pharmacogenomic datasets. We demonstrate the utility of our package in comparing large drug sensitivity datasets, such as the Genomics of Drug Sensitivity in Cancer and the Cancer Cell Line Encyclopedia. Moreover, we show how to use our package to easily perform Connectivity Map analysis. With increasing availability of drug-related data, our package will open new avenues of research for meta-analysis of pharmacogenomic data.},
+	pages = {1244--1246},
+	number = {8},
+	journaltitle = {Bioinformatics},
+	author = {Smirnov, Petr and Safikhani, Zhaleh and El-Hachem, Nehme and Wang, Dong and She, Adrian and Olsen, Catharina and Freeman, Mark and Selby, Heather and Gendoo, Deena M.A. and Grossmann, Patrick and Beck, Andrew H. and Aerts, Hugo J.W.L. and Lupien, Mathieu and Goldenberg, Anna and Haibe-Kains, Benjamin},
+	urldate = {2024-04-15},
+	date = {2016-04-15},
+	langid = {english},
+	file = {Smirnov et al. - 2016 - PharmacoGx an R package for analysis of large pha.pdf:/Users/j/Zotero/storage/2TMQNZEJ/Smirnov et al. - 2016 - PharmacoGx an R package for analysis of large pha.pdf:application/pdf},
+}
+
+@article{pharmaco,
+	title = {{PharmacoGx}: an R package for analysis of large pharmacogenomic datasets},
+	volume = {32},
+	issn = {1367-4803},
+	url = {https://doi.org/10.1093/bioinformatics/btv723},
+	doi = {10.1093/bioinformatics/btv723},
+	shorttitle = {{PharmacoGx}},
+	abstract = {Summary: Pharmacogenomics holds great promise for the development of biomarkers of drug response and the design of new therapeutic options, which are key challenges in precision medicine. However, such data are scattered and lack standards for efficient access and analysis, consequently preventing the realization of the full potential of pharmacogenomics. To address these issues, we implemented {PharmacoGx}, an easy-to-use, open source package for integrative analysis of multiple pharmacogenomic datasets. We demonstrate the utility of our package in comparing large drug sensitivity datasets, such as the Genomics of Drug Sensitivity in Cancer and the Cancer Cell Line Encyclopedia. Moreover, we show how to use our package to easily perform Connectivity Map analysis. With increasing availability of drug-related data, our package will open new avenues of research for meta-analysis of pharmacogenomic data.Availability and implementation: {PharmacoGx} is implemented in R and can be easily installed on any system. The package is available from {CRAN} and its source code is available from {GitHub}.Contact: bhaibeka@uhnresearch.ca or benjamin.haibe.kains@utoronto.{caSupplementary} information:  Supplementary data are available at Bioinformatics online.},
+	pages = {1244--1246},
+	number = {8},
+	journaltitle = {Bioinformatics},
+	shortjournal = {Bioinformatics},
+	author = {Smirnov, Petr and Safikhani, Zhaleh and El-Hachem, Nehme and Wang, Dong and She, Adrian and Olsen, Catharina and Freeman, Mark and Selby, Heather and Gendoo, Deena M.A. and Grossmann, Patrick and Beck, Andrew H. and Aerts, Hugo J.W.L. and Lupien, Mathieu and Goldenberg, Anna and Haibe-Kains, Benjamin},
+	urldate = {2024-04-15},
+	date = {2016-04-15},
+	file = {Full Text PDF:/Users/j/Zotero/storage/KLS45JXR/Smirnov et al. - 2016 - PharmacoGx an R package for analysis of large pha.pdf:application/pdf},
 }
